fix on mobile size

--- a/styles/Timer.css
+++ b/styles/Timer.css
@@ -1,11 +1,12 @@
 #countdown {
-    width: 450px;
+    width: 400px;
     padding: 10px;
     background-color: rgba(36, 34, 39, 0.651);
     display: inline-block;
     text-align: center;
     margin: auto;
   }
+  
   #countdown .box {
     padding: 10px;
     border-right: solid 1px darkgray;
